<resources>
    <string name="app_name">Bank Balance Check</string>
    <string name="calculators">Calculators</string>
    <string name="monthly_invest_amount">Monthly Invest Amount</string>
    <string name="enter_amount_rs">Enter Amount (Rs.)</string>
    <string name="exp_annual_amount">Exp Annual Amount</string>
    <string name="annual_return">Annual Return %</string>
    <string name="investment_period">Investment Period</string>
    <string name="investment_period_years">Investment Period Years</string>
    <string name="expected_amount">Expected Amount</string>
    <string name="_00_0000">₹ 00,0000</string>
    <string name="wealth_gain">Wealth Gain</string>
    <string name="amount_investment">Amount Investment</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="sip_calculator">SIP Calculator</string>
    <string name="emi_calculator">EMI Calculator</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="gst_calculator">GST Calculator</string>
    <string name="fd_calculator">FD Calculator</string>
    <string name="brokerage_calculator">Brokerage Calculator</string>
    <string name="swp_calculator">SWP Calculator</string>
    <string name="rd_calculator">RD Calculator</string>
    <string name="ppf_calculator">PPF Calculator</string>
    <string name="epf_calculator">EPF Calculator</string>
    <string name="inflation_calculator">Inflation Calculator</string>
    <string name="gratuity_calculator">Gratuity Calculator</string>
    <string name="loan_amount">Loan \nAmount</string>
    <string name="monthly_emi">Monthly\nEMI</string>
    <string name="total_interest">Total\nInterest</string>
    <string name="total_payment">Total\nPayment</string>
    <string name="monthly_emi_title">Monthly EMI</string>
    <string name="emi">EMI</string>
    <string name="period">Period</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="rate">Rate</string>
    <string name="rate_per">Rate %</string>
    <string name="loan_amount_title">Loan Amount</string>
    <string name="total_interest_title">Total Interest</string>
    <string name="total_payment_title">Total Payment</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="gst_rate">GST Rate (%)</string>
    <string name="sgst">SGST</string>
    <string name="cgst">CGST</string>
    <string name="gst_amount">GST Amount</string>
    <string name="amount">Amount</string>
    <string name="fixed_deposit_amount">Fixed Deposit Amount</string>
    <string name="fixed_deposit_amount_rs">Fixed Deposit Amount (Rs.)</string>
    <string name="rate_of_interest">Rate Of Interest</string>
    <string name="rate_of_interest_per">Rate Of Interest (%)</string>
    <string name="enter_years">Enter Years</string>
    <string name="how_long_do_you_want_to_save">How long do you want to save?</string>
    <string name="principal_amount">Principal Amount</string>
    <string name="interest_amount">Interest Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="buy_amount">Buy Amount</string>
    <string name="enter_buy_amount">Enter Buy Amount</string>
    <string name="sell_amount">Sell Amount</string>
    <string name="enter_sell_amount">Enter Sell Amount</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="select_trade_type">Select Trade Type</string>
    <string name="total_buy_order_value">Total Buy Order Value</string>
    <string name="total_sell_order_value">Total Sell Order Value</string>
    <string name="buy_brokerage">Buy Brokerage</string>
    <string name="sell_brokerage">Sell Brokerage</string>
    <string name="stt_buy_0_1">STT Buy (0.1%)</string>
    <string name="stt_sell_0_1">STT Sell (0.1%)</string>
    <string name="exchange_buy_txn_charge">Exchange Buy txn Charge</string>
    <string name="exchange_sell_txn_charge">Exchange Sell txn Charge</string>
    <string name="gst_buy_18">GST Buy (18%)</string>
    <string name="gst_sell_18">GST Sell (18%)</string>
    <string name="sebi_buy_charges">SEBI Buy Charges</string>
    <string name="sebi_sell_charges">SEBI Sell Charges</string>
    <string name="stamp_duty_0_015">Stamp duty (0.015%)</string>
    <string name="total_tax_and_charges">Total tax and charges</string>
    <string name="net_profit_and_loss">Net Profit and Loss</string>
    <string name="total_investment">Total Investment</string>
    <string name="enter_total_investment_rs">Enter Total Investment(Rs)</string>
    <string name="withdrawal_monthly">Withdrawal Monthly</string>
    <string name="withdrawal_per_month_rs">Withdrawal Per Month(Rs)</string>
    <string name="expected_return_rate">Expected Return Rate</string>
    <string name="enter_return_rate">Enter Return Rate %</string>
    <string name="time_period">Time Period</string>
    <string name="time_period_years">Time Period Years</string>
    <string name="total_withdrawal">Total Withdrawal</string>
    <string name="final_value">Final Value</string>
    <string name="month_investment">Month Investment</string>
    <string name="rate_of_investment_p_a">Rate Of Investment (P.A)</string>
    <string name="maturity_value">Maturity Value</string>
    <string name="yearly_investment">Yearly Investment</string>
    <string name="current_epf_balance_rs">Current EPF Balance (Rs)</string>
    <string name="basic_salary_monthly_rs">Basic Salary Monthly (Rs)</string>
    <string name="employer_s_contriution_to_epf">Employer\'s Contribution to EPF(%)</string>
    <string name="your_contribution_to_epf">Your Contribution to EPF (%)</string>
    <string name="annual_increase_in_salary_you_expect">Annual increase in salary you expect (%)</string>
    <string name="age_when_you_intend_to_retire_years">Age when you intend to retire(years)</string>
    <string name="your_age_years">Your Age (years)</string>
    <string name="current_epf_interest_rate">Current EPF Interest Rate(%)</string>
    <string name="total_pf_balance">Total PF Balance</string>
    <string name="input">Input</string>
    <string name="initial_year">Initial Year</string>
    <string name="year_range_1997_2016">Year Range: 1997-2016</string>
    <string name="final_year">FInal Year</string>
    <string name="your_range_1998_2017">Your Range: 1998-2017</string>
    <string name="results">Results</string>
    <string name="inflation_rtes_are_for_india_only">**Inflation Rtes are for INDIA Only</string>
    <string name="nps_calculator">NPS Calculator</string>
    <string name="monthly_salary_basic_da">Monthly Salary (Basic + DA)</string>
    <string name="monthly_salary_amount">Monthly Salary Amount</string>
    <string name="year_of_service">Year Of Service</string>
    <string name="saving_scheme">Saving scheme</string>
    <string name="public_pf">Public PF</string>
    <string name="employee_pf">Employee PF</string>
    <string name="natinal_ps">Natinal PS</string>
    <string name="sensor_cs">Sensor CS</string>
    <string name="national_sc">National SC</string>
    <string name="post_office_ss">Post Office SS</string>
    <string name="pm_vaya">PM Vaya</string>
    <string name="pm_jan_dhan">PM Jan Dhan</string>
    <string name="credit_loan_type">Credit Loan Type</string>
    <string name="car_loan">Car Loan</string>
    <string name="home_loan">Home Loan</string>
    <string name="personal_loan">Personal Loan</string>
    <string name="business_loan">Business Loan</string>
    <string name="education_loan">Education Loan</string>
    <string name="credit_card">Credit Card</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="explore_fund">Explore Funds</string>
    <string name="popular_fund">Popular Funds</string>
    <string name="banking">Banking</string>
    <string name="near_by_atm">Near By ATM</string>
    <string name="net_banking">Net Banking</string>
    <string name="bank_holiday">Bank Holiday</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="bank_balance">Bank Balance</string>
    <string name="nearby">NearBy</string>
    <string name="ifsc">IFSC</string>
    <string name="near_by">Near By</string>
    <string name="ussd_banking">USSD Banking</string>
    <string name="copy_all">Copy All</string>
    <string name="copy_ifsc">Copy IFSC</string>
    <string name="branch_code">Branch Code :</string>
    <string name="dash">-</string>
    <string name="ifsc_code_colan">IFSC Code :</string>
    <string name="micr_code">MICR Code :</string>
    <string name="address">Address :</string>
    <string name="phone_no">Phone no :</string>
    <string name="bank_name">Bank Name :</string>
    <string name="state_name">State Name :</string>
    <string name="district_name">District Name :</string>
    <string name="branch_name">Branch Name :</string>
    <string name="ussd_code">USSD Code</string>
    <string name="mini_statement">Mini Statement</string>
    <string name="customer_card_number">Customer Card Number</string>
    <string name="please_dial_from_registered_mobile_number_in_bank">*Please dial from registered mobile number in bank</string>
    <string name="credits_amp_loan_services"><![CDATA[Credits & Loan Services]]></string>
    <string name="mutual_funds">Mutual Funds</string>
    <string name="home">Home</string>
    <string name="Setting">Setting</string>
    <string name="Money">Funds</string>
    <string name="MSG_ASK_PERMISSION">This app needs permissions to use this feature. You can grant them in app settings.</string>
    <string name="all_calculator">All Calculator</string>
    <string name="see_transactions">See Transactions</string>
    <string name="bank_transactions">Bank Transactions</string>
    <string name="active_balance">Active Balance</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="update_apps">Update Apps</string>
    <string name="version_v_0_01">version v %1$s</string>
    <string name="rate_app">Rate app</string>
    <string name="share_msg">Download it. \n\n https://play.google.com/store/apps/details?id=</string>
    <string name="share_app">Share app</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="transaction_filter">Transaction Filter</string>
    <string name="date_wise_filter">Date Wise Filter</string>
    <string name="amount_wise_filter">Amount Wise Filter</string>
    <string name="ok">Ok</string>
    <string name="estimated_return">Estimated Return</string>
    <string name="total_value">Total Value</string>
    <string name="Return_calculator">Return Calculator</string>
    <string name="cancel">Cancel</string>
    <string name="Exit">Exit</string>
</resources>