<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BUi.BActivities.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardBankSearchBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:id="@+id/AutoBankSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="Select Bank"
                android:padding="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/IvBankSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/IvBankCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_cancel"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/AutoBankSearch"
                app:layout_constraintEnd_toEndOf="@id/AutoBankSearch"
                app:layout_constraintTop_toTopOf="@id/AutoBankSearch"
                app:layout_constraintWidth_percent="0.12" />

            <ImageView
                android:id="@+id/IvBankSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.12" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/BtnBankDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculators"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnBankDetail" />

    <Button
        android:id="@+id/BtnScheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saving_scheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnCal" />

    <Button
        android:id="@+id/BtnCreditLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_loan_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnScheme" />

    <Button
        android:id="@+id/BtnMutualFund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mutual_fund"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnCreditLoan" />

    <Button
        android:id="@+id/BtnNearBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnMutualFund" />

    <Button
        android:id="@+id/BtnIFSC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifsc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnNearBy" />

</androidx.constraintlayout.widget.ConstraintLayout>