<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BUi.BActivities.Calculators.SIPCalculatorActivity">

    <RelativeLayout
        android:id="@+id/RlHeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/layout_header" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RlHeaderBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/monthly_invest_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40ssp"
                android:layout_margin="@dimen/_1sdp"
                android:padding="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_2sdp">

                <EditText
                    android:id="@+id/EdtMonthlyInvest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:inputType="number"
                    android:hint="@string/enter_amount_rs"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/exp_annual_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40ssp"
                android:layout_margin="@dimen/_1sdp"
                android:padding="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_2sdp">

                <EditText
                    android:id="@+id/EdtAnnualAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:inputType="number"
                    android:hint="@string/annual_return"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/investment_period"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40ssp"
                android:layout_margin="@dimen/_1sdp"
                android:padding="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_2sdp">

                <EditText
                    android:id="@+id/EdtInvestmentPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:inputType="number"
                    android:hint="@string/investment_period_years"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                app:cardBackgroundColor="@color/gray_light"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.6"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_2sdp"
                            android:text="@string/expected_amount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TxtExpectedAmount"
                            android:layout_width="0dp"
                            android:layout_weight="0.4"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_2sdp"
                            android:gravity="end"
                            android:text="@string/_00_0000"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.6"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_2sdp"
                            android:text="@string/amount_investment"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TxtInvestmentAmount"
                            android:layout_width="0dp"
                            android:layout_weight="0.4"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_2sdp"
                            android:gravity="end"
                            android:text="@string/_00_0000"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.6"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_2sdp"
                            android:text="@string/wealth_gain"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TxtWealthGain"
                            android:layout_width="0dp"
                            android:layout_weight="0.4"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_2sdp"
                            android:gravity="end"
                            android:text="@string/_00_0000"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TxtReset"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    android:gravity="center"
                    android:background="@color/black"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TxtCalculate"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    android:padding="@dimen/_2sdp"
                    android:gravity="center"
                    android:background="@color/black"
                    android:text="@string/calculate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>